--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "eslint": "^8.52.0"
+  },
+  "dependencies": {
+    "date-fns": "^2.30.0"
   }
 }
